Project 1/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/junit-platform-console-standalone-1.5.2.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/junit-quickcheck-core-0.9.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-migrationsupport-5.5.2.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/junit-platform-runner-1.5.2.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-params-5.5.2.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/junit-platform-testkit-1.5.2.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-api-5.5.2.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/junit-platform-console-1.5.2.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-engine-5.5.2.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/junit-platform-suite-api-1.5.2.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/junit-vintage-engine-5.5.2.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/junit-platform-reporting-1.5.2.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-5.5.2.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/junit-platform-engine-1.5.2.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/junit-platform-launcher-1.5.2.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/junit-platform-commons-1.5.2.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/hamcrest-library-1.3.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/private/var/folders/5h/dkgm39y90xd5mmb1k21c9f3m0000gn/T/AppTranslocation/71D71112-DEC2-4DB8-8035-6E630B486B0B/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/pattonrobertson/Desktop/CPSC 220/Project 1
-d
/Users/pattonrobertson/Desktop/CPSC 220/Project 1/doc
-encoding
UTF-8
-charset
UTF-8
/Users/pattonrobertson/Desktop/CPSC 220/Project 1/WrapPresents.java
<---- end of javadoc command ---->
Loading source file /Users/pattonrobertson/Desktop/CPSC 220/Project 1/WrapPresents.java...
/Users/pattonrobertson/Desktop/CPSC 220/Project 1/WrapPresents.java:10: error: ';' expected
        Scanner input 6543q143q     5   3q  1   Q1  `W34654 `6  `543WQWE    trewq   4etrwazRTa  Z
                     ^
/Users/pattonrobertson/Desktop/CPSC 220/Project 1/WrapPresents.java:10: error: not a statement
        Scanner input 6543q143q     5   3q  1   Q1  `W34654 `6  `543WQWE    trewq   4etrwazRTa  Z
                          ^
/Users/pattonrobertson/Desktop/CPSC 220/Project 1/WrapPresents.java:10: error: ';' expected
        Scanner input 6543q143q     5   3q  1   Q1  `W34654 `6  `543WQWE    trewq   4etrwazRTa  Z
                               ^
/Users/pattonrobertson/Desktop/CPSC 220/Project 1/WrapPresents.java:10: error: not a statement
        Scanner input 6543q143q     5   3q  1   Q1  `W34654 `6  `543WQWE    trewq   4etrwazRTa  Z
                                         ^
/Users/pattonrobertson/Desktop/CPSC 220/Project 1/WrapPresents.java:10: error: ';' expected
        Scanner input 6543q143q     5   3q  1   Q1  `W34654 `6  `543WQWE    trewq   4etrwazRTa  Z
                                          ^
/Users/pattonrobertson/Desktop/CPSC 220/Project 1/WrapPresents.java:10: error: illegal character: '`'
        Scanner input 6543q143q     5   3q  1   Q1  `W34654 `6  `543WQWE    trewq   4etrwazRTa  Z
                                                    ^
/Users/pattonrobertson/Desktop/CPSC 220/Project 1/WrapPresents.java:10: error: not a statement
        Scanner input 6543q143q     5   3q  1   Q1  `W34654 `6  `543WQWE    trewq   4etrwazRTa  Z
                                                ^
/Users/pattonrobertson/Desktop/CPSC 220/Project 1/WrapPresents.java:10: error: illegal character: '`'
        Scanner input 6543q143q     5   3q  1   Q1  `W34654 `6  `543WQWE    trewq   4etrwazRTa  Z
                                                            ^
/Users/pattonrobertson/Desktop/CPSC 220/Project 1/WrapPresents.java:10: error: not a statement
        Scanner input 6543q143q     5   3q  1   Q1  `W34654 `6  `543WQWE    trewq   4etrwazRTa  Z
                                                     ^
/Users/pattonrobertson/Desktop/CPSC 220/Project 1/WrapPresents.java:10: error: illegal character: '`'
        Scanner input 6543q143q     5   3q  1   Q1  `W34654 `6  `543WQWE    trewq   4etrwazRTa  Z
                                                                ^
/Users/pattonrobertson/Desktop/CPSC 220/Project 1/WrapPresents.java:10: error: malformed floating point literal
        Scanner input 6543q143q     5   3q  1   Q1  `W34654 `6  `543WQWE    trewq   4etrwazRTa  Z
                                                                                    ^
/Users/pattonrobertson/Desktop/CPSC 220/Project 1/WrapPresents.java:10: error: ';' expected
        Scanner input 6543q143q     5   3q  1   Q1  `W34654 `6  `543WQWE    trewq   4etrwazRTa  Z
                                                                                                 ^
12 errors
